generated/checkers/gen/AllGen-Double-Free-e61dd678601eac53d501dda1eb1bcffec7b11bd6/build_logs/syntax-repair-08/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isHelperFree(const clang::ento::CallEvent&, clang::ento::CheckerContext&, llvm::StringRef&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:91:13: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
   91 |   if (!Name.contains_lower("free"))
      |             ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isGenericFreeWord(llvm::StringRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:106:13: error: ‘class llvm::StringRef’ has no member named ‘equals_lower’
  106 |     if (Tok.equals_lower(I))
      |             ^~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h: In instantiation of ‘struct clang::ento::ProgramStateTrait<llvm::ImmutableSet<const clang::IdentifierInfo*> >’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:848:45:   required by substitution of ‘template<class T> typename clang::ento::ProgramStateTrait<T>::context_type clang::ento::ProgramState::get_context() const [with T = llvm::ImmutableSet<const clang::IdentifierInfo*>]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:140:54:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:52:33: error: no type named ‘data_type’ in ‘class llvm::ImmutableSet<const clang::IdentifierInfo*>’
   52 |   typedef typename T::data_type data_type;
      |                                 ^~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘clang::ento::ProgramStateRef {anonymous}::SAGenTestChecker::addTokensToMap(clang::ento::ProgramStateRef, bool, const clang::ento::MemRegion*, llvm::ArrayRef<const clang::IdentifierInfo*>) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:140:54: error: no matching function for call to ‘clang::ento::ProgramState::get_context<TokenSet>() const’
  140 |   TokenSet::Factory &F = State->get_context<TokenSet>();
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:439:47: note: candidate: ‘template<class T> typename clang::ento::ProgramStateTrait<T>::context_type clang::ento::ProgramState::get_context() const’
  439 |   typename ProgramStateTrait<T>::context_type get_context() const;
      |                                               ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:439:47: note:   substitution of deduced template arguments resulted in errors seen above
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:147:15: error: cannot convert ‘const clang::IdentifierInfo*’ to ‘llvm::ImmutableSet<const clang::IdentifierInfo*>’
  147 |     S = F.add(II, S);
      |               ^~
      |               |
      |               const clang::IdentifierInfo*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableMap.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/Environment.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:999:49: note:   initializing argument 1 of ‘llvm::ImmutableSet<ValT, ValInfo> llvm::ImmutableSet<ValT, ValInfo>::Factory::add(llvm::ImmutableSet<ValT, ValInfo>, llvm::ImmutableSet<ValT, ValInfo>::value_type_ref) [with ValT = const clang::IdentifierInfo*; ValInfo = llvm::ImutContainerInfo<const clang::IdentifierInfo*>; llvm::ImmutableSet<ValT, ValInfo>::value_type_ref = const clang::IdentifierInfo*]’
  999 |     [[nodiscard]] ImmutableSet add(ImmutableSet Old, value_type_ref V) {
      |                                    ~~~~~~~~~~~~~^~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
